# LogParser

./: LogParser.cabal
src/: LogParser.hs  Main.hs
src/lib/: LogParser.hs
src/main/: Main.hs
src/test/: LogParserSpec.hs
