name:                   LogParser
version:                0.1.0.0
synopsis:               Simple logfile parser
description:            Parses logfiles according to the FRQ logfile standard
license:                MIT
license-file:           LICENSE
author:                 Raphael Mader
maintainer:             RaphMad@users.noreply.github.com
build-type:             Simple
cabal-version:          >= 1.22

library
   exposed-modules:     LogParser
   build-depends:       base
   hs-source-dirs:      src\lib
   default-language:    Haskell2010

executable LogParser
   main-is:             Main.hs
   build-depends:       base,
                        LogParser
   hs-source-dirs:      src\main
   default-language:    Haskell2010

test-suite LogParserSpec
   type:                exitcode-stdio-1.0
   main-is:             LogParserSpec.hs
   hs-source-dirs:      src\test
   build-depends:       base,
                        LogParser,
                        hspec
   default-language:    Haskell2010
